M       cat_io_writenii.m
M       cat_main.m
M       cat_main_LAS.m
M       cat_main_gintnorm.m
M       cat_parallelize.m
M       cat_run.m
M       cat_surf_calc.m
M       cat_surf_info.m
M       cat_surf_resample.m
M       cat_surf_surf2roi.m
M       cat_vol_isarnlm.m
M       cat_vol_sanlm.m
 M      internal
A       internal/cat_tst_BWPres.m
M       internal/cat_vol_nlmus.m
A       internal/cat_vol_reduceRes.m
 M      templates_1.50mm

Fixed:    Corrected error for undefined job.nprog of GUI without nprog parameter.
Fixed:    Peak estimation problem in subjects with very large ventricle. 
Fixed:    Further problems of LAS for large ventricle.
Changed:  Removed Peak-Waring.


 



------------------------------------------------------------------------
r918 | dahnke | 2016-04-07 19:20:56 +0200 (Do, 07 Apr 2016) | 14 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_main_LAS.m
M       cat_main_gcut.m

Fixed:    Corrected Yms error.
Fixed:    Corrected further problems of LAS in large ventricles.
Changed:  Less agressive skull-stripping.
Changed:  More CSF in skull-stripping.
Changed:  Cleanup only for voxel <1.9.



------------------------------------------------------------------------
r919 | gaser | 2016-04-08 12:38:28 +0200 (Fr, 08 Apr 2016) | 11 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_stools.m
M       cat_conf_tools.m
M       cat_defaults.m
M       cat_stat_spmT2x.m
M       html/cat.html

Changed: Corrected some typos and changed help text.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
MM      cat_display_matlab_PID.m
M       cat_surf_calc.m
 M      internal/cat_tst_BWPres.m
MM      internal/cat_vol_reduceRes.m

Fixed: Issue in cat_stat_surf. Thanks to Christoph Hofstetter for pointing
       to that issue.
------------------------------------------------------------------------
r920 | gaser | 2016-04-08 16:24:19